--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-primary {
+  @apply px-4 py-2 bg-sky-500 text-white;
+}
+.responsive-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+.testimoni-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+@media (max-width: 768px) {
+  .navbar {
+    @apply max-w-full;
+  }
+  .navbar.show .navbar-nav {
+    @apply block w-[95%] left-1/2 -translate-x-1/2 absolute top-full py-4 px-2 shadow-lg bg-slate-100 rounded-md border mt-1;
+  }
+  .navbar.show .nav-menu {
+    @apply gap-2 flex-col mb-3;
+  }
+  .navbar.show .nav-menu a {
+    @apply block hover:bg-sky-500 hover:text-white;
+  }
+}
