--- a/src/css/input.css
+++ b/src/css/input.css
@@ -7,6 +7,10 @@
 }
 .responsive-grid {
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+.webinar-grid {
+  display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 .testimoni-grid {
