--- a/src/css/input.css
+++ b/src/css/input.css
@@ -18,12 +18,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
-.webinar-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-
 .course-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -32,6 +26,32 @@
 .testimoni-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+select {
+	display: block;
+	padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+	/*-moz-padding-start: calc(0.75rem - 3px);*/
+	/*font-size: 1rem;*/
+	font-weight: 400;
+	line-height: 1.3;
+	color: #212529;
+	background-color: #fff;
+	background-image: url("../img/chevron-down-solid.svg");
+	background-repeat: no-repeat;
+	background-position: right 0.75rem center;
+	background-size: 16px 12px;
+	border: 1px solid #aaa;
+	border-radius: 4px;
+	transition: all;
+	transition-duration: 150ms;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
+.expand {
+  @apply rotate-180;
 }
 
 @media (max-width: 768px) {
